--- a/russian.tex
+++ b/russian.tex
@@ -41,9 +41,12 @@
   \section{\mysidestyle Обо мне}
   Я студент, начинающий разрботчик. Я программирую 4 года; за
   это время я участвовал в разработке 44 репозиториев, отправил 921
-  комитов и написал
+  комит и написал
   176729 строчек кода. В прошлом профессиональный
   \href{https://github.com/alchemmist/CV/blob/main/attachments/sport.pdf}{волейболист}.
+  Так же я
+  \href{https://www.avito.ru/moskva/predlozheniya_uslug/prepodavatel_programmirovaniya_na_python_2556461612}{преподаватель}
+  Python. Кофаундер и разработчик в \href{https://ballkit.ru/}{Баллкит}.
 
   \section{\mysidestyle Навыки}
 
@@ -66,7 +69,6 @@
     \item[Dev tools:] \inlinecode{Docker}, \inlinecode{Podman},
       \inlinecode{Make}, \inlinecode{CI/CD}, \inlinecode{Linux},
       \inlinecode{Git}
-    \item[Языки:] Russian, English.
   \end{description}
 
   \section{\mysidestyle Образование}
@@ -113,8 +115,7 @@
 
 \hfill \textsl{Декабрь 2024}
 
-Я
-\textbf{\href{https://github.com/alchemmist/CV/blob/main/attachments/scince-for-life-win.pdf}{победитель}
+\textbf{\href{https://github.com/alchemmist/CV/blob/main/attachments/scince-for-life-win.pdf}{Победитель}
 научно-практической конференции}
 «\href{https://conf.profil.mos.ru/academ}{Наука для
 жизни}» с \href{https://github.com/smart-cab/}{проектом умного
@@ -143,7 +144,8 @@ IT hack}}, где моя команда работала
 
 \section{\mysidestyle Интересы}\vspace{1mm}
 \begin{description}
-  \item[Формальная верификация:] Прохожу курс
+  \item[Формальная верификация:]
+    \href{https://github.com/alchemmist/coq-learning}{Прохожу} курс
     \texttt{\href{https://softwarefoundations.cis.upenn.edu}{softwarefoundations}}
     на \inlinecode{Coq}.
   \item[Linux:] Arch, Hyprland
@@ -151,13 +153,27 @@ IT hack}}, где моя команда работала
 \vfill
 % ------------------------------------------------------------------ %
 
+\section{\mysidestyle Опыт в стартапе}\vspace{2mm}
+
+\begin{description}
+
+  \item[Patch Loyalty]\small Программа лояльности для малого бизнеса \hfill
+    \textsl{Июль 2024 — Август 2024\vspace{1mm}}\\
+    На заказ разработал бота для администрирования и продажи Wireguard
+    ключей по подписке. Написал наглядную аналитику для
+    администратора по клиентом прямо в боте.
+
+    \textbf{Технологии:} \inlinecode{Python},
+    \inlinecode{python-telegram-bot}, \inlinecode{sqlite}.
+\end{description}
+
 \section{\mysidestyle Петпроекты}\vspace{2mm}
 
 \begin{description}
 
   \item[SmartCab]\small{\href{https://github.com/smart-cab}{Система
       умного дома} \hfill
-    \textsl{Сентябрь 2023 — Май 2024\vspace{2mm}}}\\
+    \textsl{Сентябрь 2023 — Май 2024\vspace{1mm}}}\\
     Разработал
     \href{https://www.figma.com/design/8H1tFpxgmIDV1xp06ndi73/SmartCab?node-id=0-1&p=f}{протопипы}
     дизайна админ панели и интерфейса планшета управления
@@ -170,20 +186,17 @@ IT hack}}, где моя команда работала
     \href{https://github.com/smart-cab/smartcab-hub/blob/main/backend/smartcab/interface/mqtt.py}{Реализовал}
     взаимодействие с умными устройствами по протокулу Zigbee, через
     брокер сообщений Mosquitto.
-
-    Технический стек:
-    \begin{list2}
-    \item{Язык: \inlinecode{Python}, \inlinecode{Go},
-      \inlinecode{JavaScript}, \inlinecode{bash}}
-    \item{Фроеймворки: \inlinecode{Flask}}
-    \item{Базы данных: \inlinecode{sqlite}, \inlinecode{redis},
-      \inlinecode{postgres}}
-    \end{list2}
+    Технологии:
+    \inlinecode{Python}, \inlinecode{Go},
+    \inlinecode{JavaScript}, \inlinecode{bash},
+    \inlinecode{Flask},
+    \inlinecode{sqlite}, \inlinecode{redis},
+    \inlinecode{postgres}.
     \vspace{3mm}
 
   \item[Starship]\small{\href{https://github.com/starship-crew}{Текстовая
       экшн игра в Telegram}
-    \hfill \textsl{Март 2023 — Апрель 2023\vspace{2mm}}}\\
+    \hfill \textsl{Март 2023 — Апрель 2023\vspace{1mm}}}\\
     Разработал мехнику
     \href{https://github.com/starship-crew/telegram-client/blob/main/app/handlers/fight.py}{онлайн
     дуэлей} с реальными игроками в Telegram боте. А
@@ -193,34 +206,25 @@ IT hack}}, где моя команда работала
     сообщений в чате через jinja2 шаблоны, так как для тектовой игры
     требовалось гибко работоать с большим количеством сценарных и
     пейзжаных текстов.
-
-    Технический стек:
-    \begin{list2}
-    \item{Язык: \inlinecode{Python}}
-    \item{Библиотеки: \inlinecode{Flask}, \inlinecode{alembic},
-        \inlinecode{python-telegram-bot}, \inlinecode{SqlAlchemy},
-      \inlinecode{jinja2}}
-    \item{Контейнеризация: \inlinecode{Docker}}
-    \end{list2}
+    Технологии:
+    \inlinecode{Python}, \inlinecode{Flask},
+    \inlinecode{alembic},
+    \inlinecode{python-telegram-bot}, \inlinecode{SqlAlchemy},
+    \inlinecode{jinja2}.
 
     \vspace{3mm}
 
   \item[Corpse]\small{\href{https://github.com/corpse-inc/corpse}{Игровой
       движок}
-    \hfill \textsl{Ноябрь 2022 — Январь 2023\vspace{2mm}}}\\
+    \hfill \textsl{Ноябрь 2022 — Январь 2023\vspace{1mm}}}\\
     В команде разработали полнофункциональный модульный
     игровой движок с архитектурой
     \href{https://en.wikipedia.org/wiki/Entity_component_system#:~:text=Entity%E2%80%93component%E2%80%93system%20(ECS,Entity%E2%80%93Component%E2%80%93System%20layout.}{ECS}.
       А так же survival top-down шутер игру о зомбиапокалипсисе.
-
-      Технический стек:
-      \begin{list2}
-      \item{Язык: \inlinecode{Python}}
-      \item{Фреймворк: \inlinecode{Pygame}}
-      \item{Библиотеки: \inlinecode{esper}, \inlinecode{pytmx}}
-      \item{Инструменты работы с графикой: \inlinecode{aseprite},
-        \inlinecode{Tiled}}
-      \end{list2}
+      Технологии:
+      \inlinecode{Python}, \inlinecode{Pygame},
+      \inlinecode{esper}, \inlinecode{pytmx}, \inlinecode{aseprite},
+      \inlinecode{Tiled}.
 
       \vspace{3mm}
 
@@ -231,57 +235,129 @@ IT hack}}, где моя команда работала
         \href{https://github.com/}{\texttt{release v0.0.2}}
         \endgroup
         \hfill
-      \textsl{Октябрь 2022 — Ноябрь 2022\vspace{2mm}}}\\
-      Настроил
+      \textsl{Октябрь 2022 — Ноябрь 2022\vspace{1mm}}}\\
+      Разработал декстоп приложение на \inlinecode{PyQt6}. Настроил
       \href{https://github.com}{\texttt{pre-commit}} для
       амтоматической конвертации \inlinecode{.ui} файлов в
-      \inlinecode{.py}, а так же \href{https://github.com}{Github
-      Actions} для автоматической сборки нового релиза под все
+      \inlinecode{.py}, а так же \href{https://github.com}{actions}
+      для автоматической сборки нового релиза под все
       операционные системы при каждом комите в main. Недавно перевол
       проект на \href{https://astral.sh/blog/uv}{\texttt{uv}} для
       удобного управления зависимостями.
+      Технологии:
+      \inlinecode{Python}, \inlinecode{PyQt6},
+      \inlinecode{threading}, \inlinecode{schedule}.
       % TODO: сделать рабочий релиз
       % TODO: настроить pre-commit для .ui -> .py (написать об этом здесь)
       % TODO: перехать только на pyqt6
       % TODO: настроить pre-commit и добавить ссылку на файл
       % TODO: подконец исправить версию релиза
 
-      Технический стек:
-      \begin{list2}
-      \item{Язык: \inlinecode{Python}}
-      \item{Фреймворк: \inlinecode{PyQt6}}
-      \item{Стандартная библиотека: \inlinecode{threading},
-        \inlinecode{schedule}}
-      \end{list2}
-
   \end{description}
 
   \section{\mysidestyle Заказная разработка}\vspace{2mm}
 
   \begin{description}
-
-    \item[SmartCab]\small{\href{https://github.com/smart-cab}{Система
-        умного дома} \hfill
-      \textsl{Сентябрь 2023 — Май 2024\vspace{2mm}}}\\
-      Разработал
-      \href{https://www.figma.com/design/8H1tFpxgmIDV1xp06ndi73/SmartCab?node-id=0-1&p=f}{протопипы}
-      дизайна админ панели и интерфейса планшета управления
-      (\textit{т.н. хаба}). Сверстал их
-      (\texttt{\href{https://github.com/smart-cab/smartcab-hub/tree/main/frontend/src}{1}},
-      \texttt{\href{https://github.com/smart-cab/smartcab-dashboard/tree/main/frontend/src}{2}})
-      на \inlinecode{React}.
-      \href{https://github.com/smart-cab/smartcab-bot}{Написал бота}
-      для администрирования системы.
-      \href{https://github.com/smart-cab/smartcab-hub/blob/main/backend/smartcab/interface/mqtt.py}{Реализовал}
-      взаимодействие с умными устройствами по протокулу Zigbee, через
-      брокер сообщений Mosquitto.
-
-      Технический стек:
+    \item[Telegram боты]\small{
+        \begingroup
+        \textcolor{gray!60}{Публикация всех исходников согласована}
+        \endgroup
+      }{\hfill
+      \textsl{Лето 2024}}\vspace{2mm}
       \begin{list2}
-      \item{Язык: \inlinecode{Python}, \inlinecode{Go}}
+      \item{Разработал
+          \href{https://github.com/alchemmist/vpn-bot}{бота} для
+          администрирования и продажи Wireguard
+          ключей по подписке.
+          \href{https://github.com/alchemmist/vpn-bot/blob/develop/vpn_bot/handlers/monthly_analytics.py}{Написал}
+          наглядную
+          \href{https://github.com/alchemmist/vpn-bot/tree/develop?tab=readme-ov-file#demo}{аналитику}
+          по клиентам прямо в боте.
+          Технологии: \inlinecode{Python}, \inlinecode{sqlite},
+          \inlinecode{python-telegram-bot}.
+        }
+
+        \vspace{2mm}
+
       \end{list2}
-      \vspace{3mm}
+    \item[Дрегие проекты]\small{
+        \begingroup
+        \textcolor{gray!60}{Публикация всех исходников согласована}
+        \endgroup
+      }{\hfill
+      \textsl{Лето 2024}}\vspace{2mm}
+      \begin{list2}
+
+      \item{
+          \href{https://github.com/alchemmist/portu-hack}{Парсер}
+          португальского посольства с механизмами авторизации
+          (\href{https://github.com/alchemmist/portu-hack/blob/develop/parser/parser/searcher/auth.py}{\texttt{1}}),
+          разрешения капчи
+          (\href{https://github.com/alchemmist/portu-hack/blob/develop/parser/parser/searcher/captcha.py}{\texttt{2}}),
+          и
+          ветвистым обходом форм на сайте
+          (\href{https://github.com/alchemmist/portu-hack/blob/develop/parser/parser/searcher/snif.py}{\texttt{3}}).
+          Написал
+          \href{https://github.com/alchemmist/portu-hack/blob/develop/parser/Dockerfile}{Docker
+          образ} для контейнеризированного парсинга
+          \inlinecode{selenium} из под движка \texttt{Chromium}.
+          Настрил
+          \href{https://github.com/alchemmist/portu-hack/blob/develop/pre-commit-config.yaml}{\texttt{pre-commit}}
+          хуки для линтера
+          \inlinecode{ruff} и сатического анализатора \inlinecode{pyright}.
+          Технологии: \inlinecode{Python}, \inlinecode{selenium},
+          \inlinecode{psycopg},
+          \inlinecode{SqlALchemy},
+        \inlinecode{FastApi}.}
+
+        \vspace{2mm}
+
+      \item{
+          % \begingroup
+          % \hypersetup{urlcolor=blue!30}
+          % \href{https://github.com/}{\texttt{release v0.0.1}}
+          % \endgroup
+          \href{https://github.com/alchemmist/outline-vpn-cli}{Cli-инструмент}
+          для безопасного проведения операций на
+          Outline серверах на тысячах клиентов.
+        Технологии: \inlinecode{Python}.}
+      \end{list2}
+
+  \end{description}
+
+  \section{\mysidestyle Лабалаторные работы}\vspace{2mm}
+
+  \begin{description}
+
+    \item[BookSwap]\small{\href{https://github.com/alchemmist/bookswap}{Сервис
+        обмена книгами} \hfill
+      \textsl{Май 2024\vspace{1mm}}}\\
+      \href{https://github.com/alchemmist/bookswap/blob/dev/docs/database.md}{Спроектировал}
+      базу данных
+      (\href{https://github.com/alchemmist/bookswap/blob/dev/backend/src/main/resources/schema.sql}{\texttt{1}}).
+      Написал
+      \href{https://github.com/alchemmist/bookswap/tree/dev/backend}{бэкенд}
+      с ключевой бизнес-логикой на \inlinecode{Spring} и
+      \href{https://github.com/alchemmist/bookswap/tree/dev/auth-service}{сервис
+      авторизации} на \inlinecode{Go}, а так же фронтенд на
+      \inlinecode{React}.
+
+      \textbf{Технологии:} \inlinecode{Java},
+      \inlinecode{SpringBoot}, \inlinecode{Lombok}
+      \inlinecode{JavaScript}, \inlinecode{React}, \inlinecode{Go},
+      \inlinecode{crypto}, \inlinecode{pgx}.
 
   \end{description}
 \end{resume}
+
+\begin{minipage}[H]{9.18\textwidth}
+  \begin{textblock}{7}(-0.65, 15.2)
+    \begingroup
+    \hspace{35mm}
+    \hypersetup{urlcolor=gray!90}
+    \large
+    \href{https://github.com/alchemmist}{→ больше проектв на GitHub}
+    \endgroup
+  \end{textblock}
+\end{minipage}
 \end{document}
